# spl1

./: CMakeLists.txt  Commands.cpp  Commands.h  CommandsTest.cpp  Environment.cpp  Environment.h  FileSystem.cpp  FileSystem.h  FileTest2.cpp  Files.cpp  Files.h  FilesTest1.cpp  GlobalVariables.cpp  main.cpp  makefile
include/: Commands.h  Environment.h
src/: Commands.cpp  Environment.cpp  FileSystem.cpp  Files.cpp
